--- a/steam-sales/index.css
+++ b/steam-sales/index.css
@@ -1,10 +1,24 @@
+:root {
+  --primary: #D34F73;
+  --accent: white;
+  --background: #DBBEA1;
+}
+
 body {
-  background-color: #eee5d9;
+  background-color: var(--background);
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .card {
   background-color: white;
-  width: 220px;
+  width: 300px;
   border-radius: 15px;
   padding: 10px;
   overflow: hidden;
@@ -18,7 +32,7 @@ body {
   margin-bottom: 10px;
   margin-left: -10px;
   margin-top: -10px;
-  height: 100px;
+  height: 150px;
   width: calc(100% + 20px);
   background-position: center;
   background-size: cover;
@@ -27,9 +41,9 @@ body {
 .card .percent-off {
   font-size: 18px;
   padding: 3px 8px;
-  background: #FF8A00;
+  background: var(--primary);
   border-radius: 5px;
-  color: #FFD9AB;
+  color: var(--accent);
   display: block;
   width: fit-content;
 }
@@ -38,11 +52,12 @@ body {
   font-size: 10px;
   color: #D3D3D3;
   width: fit-content;
+  text-decoration: line-through;
 }
 
 .card .sale-price {
   font-size: 14px;
-  color: #FF8A00;
+  color: var(--primary);
   width: fit-content;
   padding-left: 5px;
   font-size: 400;
@@ -55,9 +70,10 @@ body {
 }
 
 .card .developer {
-  color: #FF8A00;
+  color: var(--primary);
   font-weight: 300;
   font-size: 12px;
+  text-align: right;
 }
 
 .flex {
