--- a/steam-sales/index.css
+++ b/steam-sales/index.css
@@ -12,8 +12,8 @@ ul {
   padding: 0;
   margin: 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .card {
@@ -24,7 +24,7 @@ ul {
   overflow: hidden;
   display: block;
   text-decoration: none;
-  margin: 15px 0;
+  margin: 15px;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -32,10 +32,11 @@ ul {
   margin-bottom: 10px;
   margin-left: -10px;
   margin-top: -10px;
-  height: 150px;
+  height: 149px;
   width: calc(100% + 20px);
   background-position: center;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .card .percent-off {
@@ -98,5 +99,5 @@ ul {
 
 #time-to-load-more-cards {
   position: relative;
-  top: -200vh;
+  top: -300vh;
 }
