--- a/steam-sales/index.css
+++ b/steam-sales/index.css
@@ -6,6 +6,15 @@
 
 body {
   background-color: var(--background);
+  margin: 0;
+}
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-size: 36px;
+  margin: 10px;
 }
 
 ul {
